--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa&family=Hurricane&family=Kaushan+Script&family=Oswald:wght@400;600&family=Outfit:wght@100;400;700&family=Poppins:ital,wght@0,200;0,400;0,500;1,200;1,400;1,600&display=swap');
+
 :root {
     --primary-color: rgb(255, 92, 92);
     --primary-variant: #ff2d2d;
@@ -27,6 +29,7 @@ html {
 body {
     margin: 0;
     color: var(--on-background);
+    font-family: Poppins, sans-serif;
     background-color: var(--background);
     background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2349bdc9' fill-opacity='0.2'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
@@ -40,12 +43,15 @@ section {
 }
 
 h1 {
-    font-size: 100px;
+    font-family: Kaushan Script, sans-serif;
+    font-size: 85px;
     margin-bottom: 0;
     margin-top: 0;
 }
 
 h2 {
+    color: var(--on-background-alt);
+    font-family: Poppins, sans-serif;
     font-size: 32px;
     font-weight: normal;
     text-align: center;
@@ -53,8 +59,10 @@ h2 {
 
 /* Navigation Style */
 nav {
+    font-family: Bebas Neue, sans-serif;
     z-index: 10;
     position: fixed;
+    /* font-weight: 200; */
     font-size: 24px;
     letter-spacing: 3px;
     padding: 25px;
@@ -74,4 +82,29 @@ a:hover,
 a:focus {
     color: var(--on-background);
     border-bottom: 3px solid;
+}
+
+/* Home Section */
+.title-group {
+    text-align: center;
+}
+
+/* About Section */
+.about-container {
+    display: flex;
+}
+
+.image-container {
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin-right: 25px;
+    width: auto;
+    background: var(--background);
+    box-shadow: var(--box-shadow);
+}
+
+img {
+    height: 300px;
+    width: 300px;
 }
